--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -16,6 +16,10 @@
     display: flex;
     //justify-content: space-between;
     align-items: center;
+
+    img {
+      height: 40px;
+    }
   }
 
   button {
