projects section made responsive

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 @import "./scss/index";
 
 .App {
-  background-color: $color3;
+  background-color: $light-color1;
   //height: 100vh;
   position: relative;
 }
