--- a/src/components/GridLayout/GridLayout.module.scss
+++ b/src/components/GridLayout/GridLayout.module.scss
@@ -2,10 +2,16 @@
 
 .GridLayout {
   width: 100%;
-  // height: 100%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, minmax(0, 1fr));
   grid-gap: 1rem;
-  // background-color: khaki;
+}
+
+@media only screen and (max-width: 992px) {
+  .GridLayout {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, minmax(0, 1fr));
+    grid-gap: 0.8rem;
+  }
 }
