--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -19,7 +19,7 @@
         sans-serif;
       font-size: 20px;
       font-weight: 600;
-      color: $color5;
+      color: $light-color2;
       text-transform: capitalize;
       cursor: pointer;
 
@@ -27,5 +27,11 @@
         transform: scale(1.1);
       }
     }
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  .Navbar {
+    display: none;
   }
 }
