--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -3,22 +3,18 @@
 .Projects {
   width: 100%;
   height: 100vh;
-  background-color: $color2;
-  background-color: #1e1e20;
-  // background: linear-gradient(
-  //   90deg,
-  //   rgba(41, 59, 58, 1),
-  //   rgba(25, 114, 128, 1),
-  //   rgba(25, 114, 128, 1),
-  //   rgba(41, 59, 58, 1)
-  // );
+  background-color: $dark-color2;
   position: relative;
 
-  > *:first-child {
-    line-height: 8rem;
-    height: 8rem;
-  }
   > *:nth-child(2) {
     height: calc(100% - 8rem);
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  .Projects {
+    > *:nth-child(2) {
+      height: calc(100% - 6rem);
+    }
   }
 }
