--- a/src/components/ScrollToTop/ScrollToTop.module.scss
+++ b/src/components/ScrollToTop/ScrollToTop.module.scss
@@ -8,7 +8,7 @@
   width: 40px;
   font-size: 40px;
   background: transparent;
-  color: $color3;
+  color: $light-color1;
   cursor: pointer;
   border-radius: 50%;
 }
