--- a/src/components/SectionTitle/SectionTitle.module.scss
+++ b/src/components/SectionTitle/SectionTitle.module.scss
@@ -6,8 +6,18 @@
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 3rem;
+  line-height: 8rem;
+  height: 8rem;
   //padding: 3rem 0;
   // background-color: burlywood;
-  color: #16ade3;
+  color: $light-color4;
   text-align: center;
+}
+
+@media only screen and (max-width: 992px) {
+  .SectionTitle {
+    font-size: 2rem;
+    line-height: 6rem;
+    height: 6rem;
+  }
 }
