--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,5 +1,11 @@
-$color1: #05386b;
-$color2: #379683;
-$color3: #5cdb95;
-$color4: #8ee4af;
-$color5: #edf5e1;
+$light-color1: #f8f8ff;
+$light-color2: #edf5e1;
+$light-color3: #197280;
+$light-color4: #16ade3;
+// $light-color5: #ffffff;
+
+$dark-color1: #082e5d;
+$dark-color2: #1e1e20;
+// $dark-color3: #000000;
+// $dark-color4: #000000;
+// $dark-color5: #000000;
