--- a/src/components/SectionTitle/SectionTitle.module.scss
+++ b/src/components/SectionTitle/SectionTitle.module.scss
@@ -12,6 +12,7 @@
   // background-color: burlywood;
   color: $light-color4;
   text-align: center;
+  text-transform: capitalize;
 }
 
 @media only screen and (max-width: 992px) {
