--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -2,7 +2,7 @@ $light-color1: #f8f8ff;
 $light-color2: #edf5e1;
 $light-color3: #197280;
 $light-color4: #16ade3;
-// $light-color5: #ffffff;
+$light-color5: #d71c4c;
 
 $dark-color1: #082e5d;
 $dark-color2: #1e1e20;
