--- a/src/components/Contact/Contact.module.scss
+++ b/src/components/Contact/Contact.module.scss
@@ -1,8 +1,44 @@
 @import "../../scss/index";
 
 .Contact {
+  padding: 5rem;
   width: 100%;
-  height: 100vh;
-  background-color: #845ec2;
+  // height: 100vh;
+  background-color: $light-color4;
   position: relative;
+
+  .Socials {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    > *:not(:last-child) {
+      margin-right: 1rem;
+    }
+
+    > svg {
+      height: 50px;
+      width: 50px;
+      cursor: pointer;
+    }
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .Contact {
+    padding: 2rem;
+    .Socials {
+      flex-direction: column;
+
+      > *:not(:last-child) {
+        margin: 0;
+        margin-bottom: 1rem;
+      }
+
+      > svg {
+        height: 30px;
+        width: 30px;
+      }
+    }
+  }
 }
