--- a/src/components/ScrollToTop/ScrollToTop.module.scss
+++ b/src/components/ScrollToTop/ScrollToTop.module.scss
@@ -1,7 +1,7 @@
 @import "../../scss/index";
 
 .ScrollToTop {
-  position: absolute;
+  position: fixed;
   bottom: 10px;
   right: 10px;
   height: 40px;
@@ -9,6 +9,11 @@
   font-size: 40px;
   background: transparent;
   color: $light-color1;
-  cursor: pointer;
   border-radius: 50%;
+  transform: rotateX(180deg);
+  cursor: pointer;
+}
+
+.HideButton {
+  display: none;
 }
